further articulated the argument in the conclusion

--- a/map.tex
+++ b/map.tex
@@ -762,14 +762,17 @@ non-determinism, the consensus mechanism may be entirely
 componentized. Regardless of how consensus is achieved what it must
 guarantee is that each node agrees each state change. But a state
 change is captured directly in the rewrite rules of an operational
-semantics. In short, any language may be turned into a smart
-contracting language in a completely automated fashion.
+semantics. In short, any language equipped with an executable
+operational semantics may be turned into a smart contracting language
+in a completely automated fashion.
 
-$\MC$ reduces these mathematical facts to practice, ushering a new
-wave of decentralization in which nodes may participate in multiple
-different networks. This promiscuity dramatically increases the
-opportunities for network interoperability, and allows new features to
-be brought from one network to another.
+$\mathsf{MeTTaIL}$ provides a way to write down an executable
+operational semantics for all finitely presentable GSLTs. In other
+words, $\MC$ reduces these mathematical facts to practice, ushering a
+new wave of decentralization in which nodes may participate in
+multiple different networks. This promiscuity dramatically increases
+the opportunities for network interoperability, and allows new
+features to be brought from one network to another.
 
 As we have emphasized, however, for the real potential of
 decentralization to be realized it must be integrated into the
