--- a/map.tex
+++ b/map.tex
@@ -774,7 +774,7 @@ multiple different networks. This promiscuity dramatically increases
 the opportunities for network interoperability, and allows new
 features to be brought from one network to another.
 
-As we have emphasized, however, for the real potential of
+As we have emphasized, however, for the full potential of
 decentralization to be realized it must be integrated into the
 existing technological ecosystem so that users can use the technology
 as part of their day-to-day workflows, both on their machine, and in
