more minor wordsmithing

--- a/map.tex
+++ b/map.tex
@@ -777,7 +777,7 @@ features to be brought from one network to another.
 As we have emphasized, however, for the full potential of
 decentralization to be realized it must be integrated into the
 existing technological ecosystem so that users can use the technology
-as part of their day-to-day workflows, both on their machine, and in
+as part of their day-to-day workflows, both on their local devices, and in
 the cloud. Currently, this does require bespoke development. For
 example, the existing workflows involving file systems, as well as
 ones involving social media are completely oblivious to
