brought the discussion of interoperability into the requirements section

--- a/map.tex
+++ b/map.tex
@@ -159,6 +159,30 @@ to feed-delivered content via tokens. Finally, they can create,
 launch, interact with, shut down, and \emph{share} agents directly
 with each other.
 
+\subsubsection{Interoperability with other networks}
+With the proliferation of the BFTNs the question of interoperability
+looms large, both in terms of interoperation of different instances of
+the same network, and interoperation of different kinds of
+networks. In the first case private instances of a blockchain may be
+operating in different divisions of a single company and it becomes
+useful or necessary to have these instances interoperate to serve use
+cases that cross these divisions. A similar sort of scenario arises
+when rolling out different versions of a single network. In the second
+case use cases may span multiple networks, travel being a prime
+example. One can easily imagine the airlines settle on one network,
+while the hospitality providers settle on another. The user doesn't
+actually care. They just want to book a trip including airfare and
+hospitality.
+
+On the one hand $\MC$ is designed to be compositional. Shards can be
+stitched togher into larger networks. On the other hand, the
+channel-based model of $\MC$ makes it possible to treat other networks
+as if they were shards. Still $\MC$ has larger aims. As will be
+discussed, the technology offered here makes it possible for $\MC$
+nodes to participate as first class citizens in other networks. This
+opens up a new world of possibilities for how to bring features to
+other networks.
+
 \section{High-performance $\mathsf{MeTTa}$ Kernel}
 
 \subsection{Theories of computation}
